# heckathon-2-Phase-III-Todo-AI-Chatbot-q4

./: .env.example  .gitignore  BACKEND_README.md  CHECKLIST.md  CUsersnaylaOneDriveDesktopchatbot-todo-web.env.example  CUsersnaylaOneDriveDesktopchatbot-todo-webREADME.md  CUsersnaylaOneDriveDesktopchatbot-todo-webfrontend.env.local  CUsersnaylaOneDriveDesktopchatbot-todo-webfrontend.env.production  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STEPS.md  Dockerfile  README.md  SECURITY.md  api_tester.py  app.py  db_checker.py  deploy_helper.bat  main.py  pyproject.toml  requirements.txt  simple_db_test.py  space.yaml  test_connection.py  test_database_connection.py  verify_db_connection.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  corrected_prod_server.py  debug_registration.py  debug_server.py  diagnostic_server.py  docker-compose.yml  final_fix_server.py  fixed_prod_server.py  manage_users.py  minimal_server.py  prod_server - Copy.py  prod_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py  simple_server.py  simple_test.py  startup.py  test_api_curl.bat  test_api_direct.py  test_backend.py  test_connectivity.py  test_cors.py  test_database.py  test_enhanced_chat.py  test_main.py  test_neon_connection.py  test_registration.py  test_tasks_api.py  test_with_server.py  ultra_minimal.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py  test_db_connection.py  validate_routes.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_health.py  test_tasks.py
(+75 files in other folders)
